--- a/Sobol-BayesCubatureVerB.tex
+++ b/Sobol-BayesCubatureVerB.tex
@@ -342,117 +342,15 @@ After a suitable variable transformation, the integral may often be expressed as
 \label{eqn:defn_mu}
 \mu:= \mu(f) := \Ex[f(\boldsymbol{X})] = \int_{[0,1]^d} f(\vx)\, \dvx, 
 \end{equation}
-where $f:[0,1]^d \to \reals$ is the integrand, and $\boldsymbol{X} \sim \mathcal{U}[0,1]^d$.  The process of transforming the original integral into the form of \eqref{eqn:defn_mu} is addressed in \cite{BecHae92b, Sid08a, Sid93, Lau96a, CriEtal07}.  Our goal is to construct a cubature, $\hmu = \hmu(f)$, depending only on integrand values, which satisfies the error criterion
+where $f:[0,1]^d \to \reals$ is the integrand, and $\boldsymbol{X} \sim \mathcal{U}[0,1]^d$.  The process of transforming the original integral into the form of \eqref{eqn:defn_mu} is addressed in \cite{BecHae92b, Sid08a, Sid93, Lau96a, CriEtal07}.  Our goal is to construct a cubature, $\hmu = \hmu(f)$, depending only on integrand values at the nodes $\{\vx_i\}_{i=1}^n$, and determine the $n$ which satisfies the error criterion
 \begin{equation}
 \label{eqn:err_crit} 
 \abs{\mu - \hmu} \leq \errtol.
 \end{equation}
 
-Following the Bayesian numerics approach of \cite{Dia88a}, \cite{OHa91a}, Rasmussen and Ghahramani~\cite{RasGha03a}, \cite{BriEtal18a}, and others, we assume that our integrand is an instance of a Gaussian process and use a credible interval for $\mu$ to construct $\hmu$.  The integrand is sampled until the credible interval becomes small enough to satisfy \label{eqn:err_crit}  with high probability.  See \cite{RatHic19a} for the details of our approach.
+Following the Bayesian numerics approach of \cite{Dia88a}, \cite{OHa91a}, Rasmussen and Ghahramani~\cite{RasGha03a}, \cite{BriEtal18a}, and others, we assume that our integrand is an instance of a Gaussian process and use a credible interval for $\mu$ to construct $\hmu$.  The integrand is sampled until the credible interval becomes small enough to satisfy \label{eqn:err_crit}  with high probability.  See \cite{RatHic19a} for the details of our approach.  Our earlier work focused on lattice nodes and shift-invariant kernels.
 
-
-
-
-
-
-
-
-The cubature may be an affine function of integrand values:
-\begin{equation}
-\label{eqn:defn_hmu}  % remove this
-\hmu: = \hmu(f) := w_0 + \sum_{i=1}^{n} f(\vx_i) w_i, \quad \mathcal{P} :=\{\vx_i\}_{i=1}^n \subset [0,1]^d
-\end{equation}
-where the weights, $w_0$, and  $\vw = (w_i)_{i=1}^n \in \reals^n$, and the nodes, $\mathcal{P}$, are chosen to make the error, $\abs{\mu - \hmu}$, small. The integration domain $[0,1]^d$ is convenient for the low discrepancy node sets that we use.  The nodes are assumed to be deterministic.
-%The integral of function $f$ is the same over $[0, 1]^d$ or $(0, 1)^d$ or $[0, 1)^d$. So we use $[0, 1]^d$ or $[0, 1)^d$ depending on the application. Most often $[0, 1)^d$ is preferred especially for extensible node-sets because  it partitions easily into congruent subhypercubes.
-This research focuses on multivariate numerical integrals where the computational cost is a bottleneck. %of evaluating the integrand 
-
-
-
-
-
-
-We construct a reliable stopping criterion that determines the number of integrand values required, $n$, to ensure that the error is no greater than a user-defined error tolerance denoted by $\varepsilon$, i.e., 
-\begin{equation}
-\label{eqn:err_crit} 
-\abs{\mu - \hmu} \leq \errtol .
-\end{equation}
-Rather than relying on strong assumptions about the integrand, such as an upper bound on its variance or total variation, we construct a stopping criterion that is based on a credible interval arising from a Bayesian approach to the problem.  We build upon the work of Briol et al.~\cite{BriEtal18a}, Diaconis~\cite{Dia88a}, O'Hagan~\cite{OHa91a}, Ritter~\cite{Rit00a}, Rasmussen and Ghahramani~\cite{RasGha03a}, and others.  Our algorithm is an example of \emph{probabilistic numerics}.
-To study numerical algorithms from a statistical point of view, where uncertainty is formally due to the presence of an unknown numerical error, is the goal of probabilistic numerics.
-
-
-The primary contribution of this work is to extend the fast Bayesian cubature \cite{JagHic19a} to use digital nets and Walsh kernels. Additional enhancements also provided to have the ability to search the hyperparameters using steepest descent and to use continuous valued kernel order.
-We also provide a diagnostics to verify the Gaussian process assumption that was made in developing the Bayesian cubature.
-
-
-\iffalse
-Our primary contribution in this research is to demonstrate how the choice of a family of covariance kernels that match the low discrepancy sampling nodes facilitates fast computation of the cubature and the data-driven stopping criterion.  Our Bayesian cubature requires a computational cost of
-\begin{equation} \label{eqn:OuralgoCost}
-\Order\bigl(n \$(f) + N_{\opt}[n\$(C) + 
-n \log(n)] \bigr),
-\end{equation} 
-where $\$(f)$ is the cost of one integrand value, $\$(C)$ is the cost of a single covariance kernel value,  $\Order(n \log(n))$ is the cost of a fast Bayesian transform, and $N_{\opt}$ is an upper bound on the number of optimization steps required to choose the hyperparameters. If function evaluation is expensive, e.g., the output of a computationally intensive simulation, or if $\$(f) = \Order(d)$ for large $d$, then $\$(f)$ might be similar in magnitude to $N_{\opt} \log(n)$ in practice.  Typically, $\$(C) = \Order(d)$.  Note that the $\Order(n \log(n))$ contribution is $d$ independent.
-
-
-In contrast to our fast algorithm, the typical computational cost for Bayesian cubature is
-\begin{equation} \label{eqn:TheiralgoCost}
-\Order\bigl(n \$(f) + N_{\opt}[n^2\$(C) + n^3] \bigr),
-\end{equation} 
-which is explained in \cite{JagHic19a}. Note that apart from evaluating the integrand, the computational cost in \eqref{eqn:TheiralgoCost} is much larger than that in \eqref{eqn:OuralgoCost}.  
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
-
-
-% \Section{Low Discrepancy Points}
-
-Low discrepancy points are characterized by how uniformly the points are distributed, which is measured by the \emph{discrepancy}. % score, especially when the points are projected onto low-dimensions. 
-The goal is to have maximum uniform space filling. The discrepancy is defined as below.
-Let $\mathcal{M}$ be the set of all intervals of the form $\prod_{\ell=1}^{d} [a_\ell, b_\ell) = \{ \vx \in \mathbb{R}^d : a_\ell \le x_\ell \le b_\ell, 0 \le a_\ell \le b_\ell \le 1 \}$. Then, the discrepancy of a point set $\mathcal{P}$ is,
-\begin{align*}
-D(\mathcal{P}) := \sup_{M \in \mathcal{M}} 
-\abs{ \frac{\abs{M \cap \mathcal{P}}}{\abs{\mathcal{P}}} - \lambda_L(M) },
-\end{align*}
-where $\abs{\mathcal{P}}$ is the cardinality of the set $\mathcal{P}$, and $\lambda_L$ is the Lebesgue measure.
-The \emph{low discrepancy points} satisfy $D(\mathcal{P}) = \Order((\log n)^d/n)$.
-In this work we experiment with two most popular low discrepancy point sets, 1) lattice points, and 2) Sobol' points.
-\fi
-
-
-% \Section{Prior Work}
-\cite{JagHic19a} introduces Bayesian cubature and develops the fast Bayesian transform with certain assumptions. The fast Bayesian transform helps to speedup the computations.  Using rank-1 lattice points and shift-invariant kernels demonstrates the fast Bayesian cubature. 
-
-
-Hickernell~\cite{Hic17a} compares different approaches to cubature error analysis depending on whether the rule is deterministic or random and whether the integrand is assumed to be deterministic or random.  Error analysis that assumes a deterministic integrand lying in a Banach space leads to an error bound that is typically impractical for deciding how large $n$ must be to satisfy \eqref{eqn:err_crit}.  The deterministic error bound includes a (semi-)norm of the integrand, which is often more complex to compute than the original integral.
-
-Hickernell and Jim\'enez-Rugama~\cite{HicJim16a,JimHic16a} have developed stopping criteria for cubature rules based on low discrepancy nodes by tracking the decay of the discrete Walsh coefficients of the integrand.  The algorithms proposed here also rely on discrete Walsh coefficients, but in a different way.  We only discuss automatic Bayesian cubature for absolute error tolerances in this thesis. The recent work by Hickernell, Jim\'enez-Rugama, and Li~\cite{HicEtal17a} suggests how one might accommodate more general error criteria, such as relative error tolerances which has been adapted in the MATLAB implementation of our algorithms.
-
-Section~\ref{sec:BC} explains the Bayesian approach to calculate the posterior cubature error and defines our automatic Bayesian cubature. Although much of this material is known, it is included for completeness.  We also briefly introduce foundational concepts such as the fast Bayesian transform and the confidence intervals that will be basis of our main contributions.
-% Section~\ref{sec:fast_BC}  introduces the concept of covariance kernels that match the nodes and expedite the computations required by our automatic Bayesian cubature. 
-% Section~\ref{sec:shift_invariant_kernel} implements this concept for shift invariant kernels and rank-1 lattice nodes. It also develops approaches to build shift-invariant kernels of continuous valued kernel order rather than fixing the kernel order to integer values.
-Section~\ref{sec:bayes-cub-enhancements} provides enhancements to the fast Bayesian cubature introduced in \cite{JagHic19a}.
-Section~\ref{sec:gauss-diagnostics} provides a diagnostics using Q-Q plots to verify the Gaussian process assumption used in developing the Bayesian cubature.
-Section~\ref{sec:sobol_walsh} demonstrates our new implementation of matching nodes and kernel using Sobol' points and Walsh kernels. It also shows that the fast Walsh Hadamard as the fast Bayesian transform for this case.
-% Section~\ref{sec:NumImpl} describes how to avoid cancellation error for kernels of product form. It also covers  some of the additional techniques used in the implementation of our Bayesian Cubature algorithms. 
-Numerical examples are provided in Section~\ref{sec:NumExp} to demonstrate the performance and advantages of our new algorithms.  We conclude with a brief discussion and potential future work in Section~\ref{sec:conclusion-future-work}.
-
-
-We use the terms integrand or function interchangeably to denote the function $f$ being considered for the numerical integration. Also, we use the terms, nodes, points, node-sets, designs, and data-sites interchangeably to denote the points $\mathcal{P}$ used in the cubature.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+The primary contributions of this article are several. We show that tuning the hyperparameters for the fast Bayesian kernels can be done quickly with gradient descent in Section \ref{grad_descent_MLE}.  We extend our the definition of our fast kernels to have a continuous valued kernel order in Section \ref{sec:non_integer_kernel_order}. Diagnostics that test our assumption that $f$ comes from a Gaussian process are introduced in Section \ref{sec:gauss-diagnostics}. In Section \ref{sec:sobol_walsh} we extend fast Bayesian cubature to use digital nets and Walsh kernels.  Section \ref{sec:NumExp} is devoted to numerical experiments that illustrate these new ideas.  The next section introduces some notation and results from \cite{RatHic19a}.
 
 
 
@@ -463,158 +361,44 @@ We use the terms integrand or function interchangeably to denote the function $f
 \section{Bayesian Cubature}
 \label{sec:BC} 
 
-\JRNote{
-Briefly explain and cite our BayesLattice paper
-\begin{enumerate}
-	\item automatic Bayesian cubature
-	\item fast automatic Bayesian cubature
-\end{enumerate}
-}
-
-
-
-The Bayesian approach for numerical analysis was popularized by 
-%Diaconis 
-\cite{Dia88a}. The earliest reference for such kind of approach dates back to Poincar\'e, where, the theory of interpolation was discussed.
-Diaconis motivates the reader by interpreting the most well known numerical methods, 1) trapezoidal rule and 2) splines, from the statistical point of view with whatever is known about the integrand as prior information. 
-For example, the trapezoidal rule can be interpreted as a Bayesian method with prior information being modeled as a Brownian motion in the sample space $\mathcal{C}[0,1)$, the space of continuous functions. %, with normal prior.
-
-This research is focused on the Bayesian approach for numerical integration that is known as Bayesian cubature as introduced by O'Hagan \cite{OHagen1991}.  % $\mathbb{P}_f$
-Bayesian cubature returns a probability distribution, that expresses belief about the true value of integral, $\mu(f)$.
-This posterior probability distribution is based on a prior that depends on $f$, which is computed via Bayes' rule using the \emph{data} contained in the function evaluations \cite{BriEtal18a}. 
-%The maximum likelihood estimate of $\mathbb{P}_f$ can be interpreted as a point estimate of the integral. 
-The distribution in general captures numerical uncertainty due to the fact that we have only used a finite number of function values to evaluate the integral.
-
 \subsection{Bayesian Posterior Error}
 \label{sec:BayesPostErr}
 
 We assume the integrand, $f$, is an instance of a stochastic Gaussian process, i.e., $f \sim \mathcal{GP}(m,s^2 C_\vtheta)$.  Specifically, $f$ is a real-valued random function with constant mean $m$ and covariance function $s^2C_\vtheta$, where $s$ is a positive scale factor, and $C_\vtheta: [0,1]^d \times [0,1]^d \to \mathbb{R} $ is a symmetric, positive-definite function and, parameterized by $\vtheta$:
 \begin{multline} \label{FJH:eq:CondPosDef}
-\mC^T = \mC,  \quad \va^T \mC \va > 0, \quad \text{where }  \mC = \left(  C_\vtheta(\vx_i,\vx_j)  \right)_{i,j=1}^n,\\
+\mC_\vtheta^T = \mC_\vtheta,  \quad \va^T \mC_\vtheta \va > 0, \quad \text{where }  \mC_\vtheta = \left(  C_\vtheta(\vx_i,\vx_j)  \right)_{i,j=1}^n,\\
 \text{for all } \va \ne 0, \;
 n\in \mathbb{N}, \; \text{distinct} \; \vx_1, \ldots, \vx_n \in [0,1]^d.
 \end{multline}
-The covariance function, $C$, and the Gram matrix, $\mC$, depend implicitly on $\vtheta$, but the notation may omit this for simplicity's sake.
-Procedures for estimating or integrating out the hyperparameters $m$, $s$, and $\vtheta$ are explained later in this section.
 
-For a Gaussian process, all vectors of linear functionals of $f$ have a multivariate Gaussian distribution. 
-%Defining  $\vf  := \left( f(\vx_i)\right)_{i=1}^n$, the integrand values sampled at $\left( \vx_i\right)_{i=1}^n$,  as the multivariate Gaussian vector of function values, it follows that 
-For any deterministic sampling scheme with distinct nodes, $\{\vx_i\}_{i=1}^n$, and defining  $\vf  := \left( f(\vx_i)\right)_{i=1}^n$ as the multivariate Gaussian vector of function values, it follows from the definition of a Gaussian process that 
-\begin{subequations} \label{eqn:fGaussDist}
-	\begin{align}
-	\vf  & \sim \calN(m \vone, s^2 \mC), \\
-	\mu & \sim \calN(m, s^2 c_0), \\
-	\label{eqn:fGaussDist_c0}
-	\text{where }
-	c_0 &:= \int_{[0,1]^{d} \times [0,1]^{d}} C_\vtheta(\vx,\vt) \, \dif{\vx} \, \dif{\vt}, \\
-	\label{eqn:fGaussDist_vc}
-	\cov(\vf, \mu) &= \left(  \int_{[0,1]^d} C(\vt,\vx_i) \, \D \vt \right)_{i=1}^n  =: \vc.
-	\end{align}
-\end{subequations}
-Here, $c_0$ and $\vc$ depend implicitly on $\vtheta$.  We assume the covariance function $C$ is simple enough that the integrals in these definitions can be computed analytically.
-
-\iffalse
-We need the following lemma to derive the posterior error of our cubature. 
-
-\begin{lemma} \cite[(A.6), (A.11--13)]{RasWil06a} \label{thrm:condDist} If $\vY = (\vY_1, \vY_2)^T \sim \calN (\vm,\mC)$, where $\vY_1$ and $\vY_2$ are random vectors of arbitrary length, and 
-	\begin{gather*}
-	\vm = \begin{pmatrix} \vm_1 \\ \vm_2 \end{pmatrix} = \begin{pmatrix} \Ex(\vY_1) \\ \Ex(\vY_2) \end{pmatrix}, \\
-	\mC = \begin{pmatrix}
-	\mC_{11} & \mC_{21}^T \\ 	\mC_{21} & \mC_{22}
-	\end{pmatrix} =
-	\begin{pmatrix}
-	\var(\vY_{1}) & \cov(\vY_{1}, \vY_2) \\ 	\cov(\vY_2,\vY_{1}) & \var(\vY_{2})
-	\end{pmatrix} 
-	\end{gather*}
-	then 
-	\begin{align*}
-	\vY_1 \vert \vY_2 \; \sim \; \calN \bigl(\vm_1 + \mC_{21}^T \mC_{22}^{-1}(\vY_2 - \vm_2), \quad \mC_{11} - \mC_{21}^T \mC_{22}^{-1} \mC_{21} \bigr).
-	\end{align*}
-	Moreover, the inverse of the matrix $\mC$ may be partitioned as
-	\begin{gather*}
-	\mC^{-1} = \begin{pmatrix} \mA_{11} & \mA_{21}^T \\ \mA_{21} & \mA_{22} \end{pmatrix}, \\
-	\mA_{11} = (\mC_{11} - \mC_{12} \mC_{22}^{-1} \mC_{21})^{-1}, \qquad 
-	\mA_{21} = -  \mC_{22}^{-1} \mC_{21} \mA_{11}, \\ 
-	\mA_{22} = \mC_{22}^{-1} + \mC_{22}^{-1} \mC_{21} \mA_{11} \mC_{21}^T \mC_{22}^{-1}.
-	\end{gather*}
-\end{lemma}
-\fi
-
-It follows from Lemma 1 
-% \ref{thrm:condDist} 
-in \cite{JagHic19a} that the \emph{conditional} distribution of the integral, given observed function values, $\vf = \vy$, is also Gaussian:
-\begin{align} \label{eqn:condInteg}
-\mu | (\vf = \vy) \sim \calN \bigl(m (1 - \vc^T \mC^{-1} \vone)  + \vc^T \mC^{-1} \vy, \;\;
-s^2(c_0  -\vc ^T \mC^{-1} \vc) \bigr).
-\end{align}
-The natural choice for  the cubature is the posterior mean of the integral, namely, 
-\begin{equation}
-\label{eqn:BayesCub}
-\widehat{\mu}  \vert ( \vf = \vy)
-= m(1 - \vone^T  \mC^{-1}\vc )
-+ \vc^T \mC^{-1} \vy,
-\end{equation}
-which takes the form of \eqref{eqn:defn_hmu}.
-Under this definition, the cubature error has zero mean and a variance depending on the choice of nodes:
-\begin{equation*}
-%\label{eqn_error_cond_prob}
-(\mu-\hmu) | (\vf = \vy)
-\sim  \calN 
-\left(
-0, \quad
-s^2 (c_0 - \vc^T\mC^{-1}\vc) 
-\right).
-\end{equation*}
-A credible interval for the integral is given by 
+As shown in \cite{RatHic19a}, a credible interval for the integral is given by 
 \begin{subequations} \label{eqn_prob_confidence_interval}
 	\begin{gather}
 	\mathbb{P}_f \left[
 	|\mu-\hmu| \leq \err_{\CI}
 	\right] = 99\%, \\
-	\err_{\CI} = 2.58 s \sqrt{c_{0} - \vc^T\mC^{-1}\vc}.
+	\err_{\CI} = 2.58 s \sqrt{c_{0,\vtheta} - \vc_\vtheta^T\mC_\vtheta^{-1}\vc_\vtheta}.
 	\end{gather}
 \end{subequations}
-Naturally, $2.58$ and $99\%$ can be replaced by other quantiles and credible levels.
-
-
-
-Any Bayesian cubature algorithm based on \eqref{eqn_prob_confidence_interval} has  computational cost that is $\Order\bigl( n^3 \bigr)$.
-\iffalse
-sum of the following:
-\begin{itemize}
-	\item $\Order\bigl(n\$(f) \bigr)$ for the integrand data, where $\$(f)$ is the computational cost of a single $f(\vx)$; $\$(f)$ may be large if it is the result of an expensive simulation; $\$(f)$ is typically proportional to $d$;
-	
-	\item $\Order\bigl(N_{\opt} n^2 \$(C_\vtheta) \bigr)$ for the evaluation of the Gram matrix $\mC$, $N_\opt$ is the number of optimization steps required, and  $\$(C)$ is the computational cost of a single $C(\vt,\vx)$; $\$(C)$ is typically proportional to $d$; and
-	
-	\item $\Order\bigl(N_{\opt} n^3 \bigr)$ for the matrix inversions and determinant calculations; this cost is independent of $d$.
-\end{itemize}
-\fi
-As shown in the numerical experiments \cite{JagHic19a}, the cost increases quickly as the $n$ required to meet the error tolerance increases.  This motivates the fast Bayesian cubature algorithm presented in Section~\ref{sec:fast_BC}.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+where
+\begin{subequations} \label{eqn:fGaussDist}
+\begin{gather}
+\label{eqn:fGaussDist_c0}
+	c_{0,\vtheta} := \int_{[0,1]^{d} \times [0,1]^{d}} C_\vtheta(\vx,\vt) \, \dif{\vx} \, \dif{\vt}, \\
+	\label{eqn:fGaussDist_vc}
+ \vc_\vtheta := \left(  \int_{[0,1]^d} C_\vtheta(\vt,\vx_i) \, \D \vt \right)_{i=1}^n.
+	\end{gather}
+\end{subequations}
+Naturally, $2.58$ and $99\%$ can be replaced by other quantiles and credible levels.  The covariance function, $C$, and the Gram matrix, $\mC$, and $c_{0,\vtheta}$ and $\vc_\vtheta$ depend implicitly on $\vtheta$, but the notation may omit this for simplicity's sake.  The formula for $\hmu$ is given below in Section \ref{sec:hyperparameters}.
 
 
 
 \subsection{Fast Bayesian Transform Kernel}
 \label{sec:fast_BC}
 
-As introduced in \cite{JagHic19a}, fast Bayesian transform kernel is defined with the following assumptions:
+Normally, computing $\err_{\CI}$ in  \eqref{eqn_prob_confidence_interval} would require $\Order\bigl( n^3 \bigr)$ operations to perform the equivalent of a matrix inversion.  However, for a certain class of kernels, $C$, termed fast Bayesian transform kernels in \cite{RatHic19a}, this cost can be drastically reduced.  The key is for the covariance kernel to match the nodes.
+
+Let the eigenvector-eigenvalue decomposition of the Gram matrix be expressed as follows:
 \begin{align}
 \nonumber
 \mC = \mCtheta &= \Big(C_\vtheta(\vx_i,\vx_j)\Big)_{i,j=1}^n  = (\vC_1,...,\vC_n) 
@@ -623,17 +407,12 @@ As introduced in \cite{JagHic19a}, fast Bayesian transform kernel is defined wit
 &= \frac 1n \mV \mLambda \mV^H , 
 \quad \quad \mV^H = n \mV^{-1}, \\
 \nonumber
-\mV &= (\vv_1,...,\vv_n)^T = (\vV_1,...,\vV_n) \\
-\nonumber
-\mC^p  &= \frac 1n \mV \mLambda^{p} \mV^H, \qquad \forall p \in \integers,
+\mV &= (\vv_1,...,\vv_n)^T = (\vV_1,...,\vV_n),
 \end{align}
-where $\mV^H$ is the Hermitian of $\mV$, $\vC_1,\cdots,\vC_n$ are columns of $\mC$,  $\vV_1,\cdots,\vV_n$ are columns of $\mV$, and $\vv_1,\cdots,\vv_n$ are rows of $\mV$. 
-The columns of matrix $\mV$ are eigenvectors of $\mC$, and $\mLambda$ is a diagonal matrix of eigenvalues of $\mC$.
-In this and later sections, we drop the notation of $\vtheta$'s dependence of various quantities for simplicity of notation.  The normalization of $\mV$ assumed in \eqref{eqn:ftk_factor} conveniently allows the first eigenvector, $\vV_1$, to be the vector of ones in \eqref{fastcompAssumpB} below.  
-For any $n \times 1$ vector $\vb$, define the notation  $\widetilde{\vb} := \mV^H \vb$.
+where $\mV^H$ is the Hermitian of $\mV$.
+The columns of matrix $\mV$ are eigenvectors of $\mC$, and $\mLambda$ is a diagonal matrix of eigenvalues of $\mC$. The normalization of $\mV$ assumed in \eqref{eqn:ftk_factor} conveniently allows the first eigenvector, $\vV_1$, to be the vector of ones in \eqref{fastcompAssumpB} below.
 
-
-We make three assumptions that allow $\widetilde{\vb}$'s fast computation:
+We make three assumptions that allow the fast computation of $\widetilde{\vb} := \mV^H \vb$:
 \begin{subequations} \label{fastcompAssump}
 	\begin{gather}
 	\label{fastcompAssumpA}
@@ -644,28 +423,14 @@ We make three assumptions that allow $\widetilde{\vb}$'s fast computation:
 	\text{ Computing $\mV^H \vb$ requires only $\Order(n \log n)$ operations } \forall \vb.
 	\end{gather}
 \end{subequations}
-We call the transformation $\vb \mapsto \mV^H \vb$ a \emph{fast Bayesian transform} and $C_\vtheta$ a \emph{fast Bayesian transform kernel} for the matching nodes $\{\vx_i\}_{i=1}^\infty$.  
-
-
-The covariance kernel used in practice also may satisfy an additional assumption:
+We call the transformation $\vb \mapsto \mV^H \vb$ a \emph{fast Bayesian transform} and $C_\vtheta$ a \emph{fast Bayesian transform kernel} for the matching nodes $\{\vx_i\}_{i=1}^\infty$.  The covariance kernel used in practice also may satisfy an additional assumption:
 \begin{equation} \label{addAssump}
 \int_{[0,1]^d} C(\vt,\vx) \, \D \vt = 1 \qquad \forall \vx \in [0,1]^d,
 \end{equation}
-which implies that $c_{0} = 1$ \eqref{eqn:fGaussDist_c0} and $\vc_{} = \vone$ 	\eqref{eqn:fGaussDist_vc}.  
-% Under \eqref{addAssump}, the expressions above may be further simplified: \JRNote{fix this}
+which implies that $c_{0} = 1$ \eqref{eqn:fGaussDist_c0} and $\vc_{} = \vone$ 	\eqref{eqn:fGaussDist_vc}.  In \cite{RatHic19a} we showed that shift invariant kernels and lattice nodes satisfied the above assumptions.
 
 
-
-
-
-
-
-
-
-
-
-
-\subsection{Hyperparameter search}
+\subsection{Hyperparameter search} \label{sec:hyperparameters}
 \JRNote{
 	This section explains hyperparameter estimation using gradient descent}
 
